# Planarity_Testing

./: .gitignore  .gitignore.save  CMakeLists.txt  README.md  checker.py  create_embedding.cpp  draw.py  gen  graph_generator.cpp  main.cpp  networkx_lib_test.py  rectangle_grid_generator.cpp  run.py  solve  stream.in  stream.out  tests.txt
draw_graph/: build.gradle.kts  settings.gradle.kts
generators/: graph_generator.cpp  rectangle_grid_generator.cpp
tests/: test10.txt  test11.txt  test12.txt  test13.txt  test16.txt  test17.txt  test18.txt  test19.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  test30.txt  test31.txt  test32.txt  test33.txt  test34.txt  test35.txt  test36.txt  test37.txt  test38.txt  test39.txt  test40.txt  test41.txt  test42.txt  test43.txt  test5.txt  test6.txt  test8.txt
tests/small_tests/: test1.txt  test2.txt  test4.txt  test9.txt
util/: test_creator.py
