cmake_minimum_required(VERSION 3.24)
project(planar-graphs-project)

set(CMAKE_CXX_STANDARD 20)
add_compile_definitions(LOCAL)
add_compile_definitions(_GLIBCXX_DEBUG)
#set(CMAKE_CXX_FLAGS -O3)
add_executable(solve main.cpp)
add_executable(random_generator generators/graph_generator.cpp)
add_executable(grid_generator generators/rectangle_grid_generator.cpp)
